# ITools

./: .gitignore  ConvertVideoToHiResAudio.py  ProjectTreeMake.py  README.md  ToHiRes.py  ToMp3.py  USAGE.md  project_tree_make.py  pyproject.toml  requirements.txt  sortwork.py
voice/: convert_video_to_hires_audio.py  to_hires.py  to_mp3.py
